Updated the windows installer

--- a/src/WindowsInstaller/FreeCAD.wxs
+++ b/src/WindowsInstaller/FreeCAD.wxs
@@ -165,6 +165,7 @@
             <ComponentRef Id="CompModShip" />
             <ComponentRef Id="CompModShipExamples" />
             <ComponentRef Id="CompModShipIcons" />
+            <ComponentRef Id="CompModShipOpenCL" />
             <ComponentRef Id="CompModshipAreasCurve" />
             <ComponentRef Id="CompModshipCreateShip" />
             <ComponentRef Id="CompModshipHydrostatics" />
