--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -49,6 +49,7 @@
         <file>edit-edit.svg</file>
         <file>help-browser.svg</file>
         <file>preferences-system.svg</file>
+        <file>process-stop.svg</file>
         <file>window-new.svg</file>
         <file>camera-photo.svg</file>
         <file>applications-accessories.svg</file>
