--- a/src/Mod/Machining_Distortion/Resources/machdist_resources.qrc
+++ b/src/Mod/Machining_Distortion/Resources/machdist_resources.qrc
@@ -9,5 +9,8 @@
 		<file>icons/MachDist_NewAnalysis.svg</file>
 		<file>icons/MachDist_Preferences.svg</file>
 		<file>icons/MachDist_Upload.svg</file>
+		<file>icons/MachDist_FemMesh.svg</file>
+		<file>icons/MachDist_AddFemMesh.svg</file>
+		<file>icons/MachDist_Isostatic.svg</file>
     </qresource>
 </RCC> 
