0001167: Arch fixtures system
Arch objects can now have Fixtures, which is a mesh or part attached to
them, but that doesn't modify the geometry of the base object. They are
normally hidden, except when the new Display Mode "Detailed" is used.
Fixtures can be added to any Arch object using the new Arch_Fixture command
and removed with the standard Arch_Remove command.

Fixtures are useful for small unimportant details like window latches or hinges,
that should stay hidden most of the time.

--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -31,6 +31,7 @@
         <file>icons/Arch_SelectNonManifold.svg</file>
         <file>icons/Arch_MergeWalls.svg</file>
         <file>icons/Arch_Wall_Tree_Assembly.svg</file>
+        <file>icons/Arch_Fixture.svg</file>
         <file>ui/archprefs-base.ui</file>
         <file>translations/Arch_af.qm</file>
         <file>translations/Arch_de.qm</file>
