Implementing new Alignment approach

--- a/src/Mod/Machining_Distortion/Aligment.ui
+++ b/src/Mod/Machining_Distortion/Aligment.ui
@@ -58,6 +58,9 @@
      <property name="text">
       <string>Auto minimize</string>
      </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
