further implement Align and Material

--- a/src/Mod/Machining_Distortion/Resources/ui/MachDist-userprefs.ui
+++ b/src/Mod/Machining_Distortion/Resources/ui/MachDist-userprefs.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Gui::Dialog::DlgSettingsDraft</class>
- <widget class="QWidget" name="Gui::Dialog::DlgSettingsDraft">
+ <class>Gui::Dialog::DlgSettingsPartDistortion</class>
+ <widget class="QWidget" name="Gui::Dialog::DlgSettingsPartDistortion">
   <property name="geometry">
    <rect>
     <x>0</x>
