finish move tool

--- a/src/Mod/Machining_Distortion/Aligment.ui
+++ b/src/Mod/Machining_Distortion/Aligment.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>136</width>
-    <height>223</height>
+    <width>150</width>
+    <height>297</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QPushButton" name="pushButton_FlipX">
      <property name="font">
@@ -64,12 +64,28 @@
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="pushButton_Minimize">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>30</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Minimize</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Volume</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="font">
          <font>
@@ -78,11 +94,18 @@
          </font>
         </property>
         <property name="text">
-         <string>X-Size: 0mm</string>
+         <string>X-Size:</string>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="lineEdit_XS">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
        <widget class="QLabel" name="label_2">
         <property name="font">
          <font>
@@ -91,11 +114,18 @@
          </font>
         </property>
         <property name="text">
-         <string>Y-Size: 0mm</string>
+         <string>Y-Size:</string>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="lineEdit_YS">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
        <widget class="QLabel" name="label_3">
         <property name="font">
          <font>
@@ -104,7 +134,34 @@
          </font>
         </property>
         <property name="text">
-         <string>Z-Size: 0mm </string>
+         <string>Z-Size:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="lineEdit_ZS">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Volume:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="lineEdit_VS">
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
