--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -86,5 +86,6 @@
         <file>translations/Draft_pt-PT.qm</file>
         <file>ui/userprefs-base.ui</file>
         <file>ui/userprefs-import.ui</file>
+        <file>ui/userprefs-visual.ui</file>
     </qresource>
 </RCC> 
