--- a/src/Mod/Draft/Resources/ui/userprefs-visual.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-visual.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>General settings</string>
+   <string>Visual settings</string>
   </property>
   <layout class="QVBoxLayout">
    <property name="spacing">
