--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -34,6 +34,8 @@
         <file>icons/Arch_Fixture.svg</file>
         <file>icons/Arch_Space.svg</file>
         <file>icons/Arch_Space_Tree.svg</file>
+        <file>icons/Arch_Stairs.svg</file>
+        <file>icons/Arch_Stairs_Tree.svg</file>
         <file>ui/archprefs-base.ui</file>
         <file>translations/Arch_af.qm</file>
         <file>translations/Arch_de.qm</file>
